# ros_drone

./: .gitignore  LOSE.md  README.md
docs/: iris_cgo3_sitl_gimbal_camera_setup.md
src/detector/: CMakeLists.txt  package.xml
src/detector/launch/: detector.launch  detector_onnx.launch
src/detector/scripts/: yolov8_detector_pt.py
src/detector/src/: yolov8_detector_node.cpp
src/ros_drone/: CMakeLists.txt  package.xml
src/ros_drone/config/: target_escape_teleop.yaml  target_search.yaml  target_searcher.yaml
src/ros_drone/docs/: decision.md
src/ros_drone/include/: DataManager.h  utils.h
src/ros_drone/include/ros_drone/: DataManager.h  TargetSearcher.h  target_pursuit.h  target_searcher.h  task_contract.h  util.h
src/ros_drone/launch/: cgo3_track.launch  cgo3_yaw_track.launch  target_searcher_tester.launch  two_uav_cgo3.launch  two_uav_depth_escape.launch  uav_control.launch
src/ros_drone/scripts/: export_yolov8_onnx.py  gimbal_track_target.py  gimbal_yaw_track_target.py  lost_target_demo.py  read_mission_distance.py  target_searcher_tester  two_uav_depth_escape.sh  uav_control.py
src/ros_drone/src/: DataManager.cpp  TargetSearcher.cpp  main.cpp  target_pursuit.cpp  target_searcher.cpp  target_searcher_tester.cpp  target_searcher_tester_bin.cpp
src/target_searcher/: CMakeLists.txt  package.xml
src/target_searcher/config/: target_searcher.yaml
src/target_searcher/docs/: decision.md
src/target_searcher/include/target_searcher/: TargetSearcher.h
src/target_searcher/launch/: target_searcher_tester.launch
src/target_searcher/src/: TargetSearcher.cpp  target_searcher_tester_bin.cpp
