<?xml version="1.0"?>
<package format="2">
  <name>ros_drone</name>
  <version>0.1.0</version>
  <description>双机 SITL：本机深度相机、目标机逃脱序列</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
</package>
